# tsu-consult-api

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: main.yml  stop-services.yml
.run/: djangorest-starter-kit.run.xml
admin_site/: __init__.py  site.py  views.py
admin_site/modules/: __init__.py  auth_admin.py  dean_approval_admin.py  teacher_approval_admin.py
apps/auth_app/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
apps/auth_app/migrations/: 0002_user_created_at_user_phone_number_user_role_and_more.py  0003_alter_user_managers_teacherapproval.py  0004_alter_teacherapproval_options_alter_user_options.py  0005_alter_teacherapproval_user.py  0006_alter_user_role.py  0007_deanapproval.py  0008_alter_teacherapproval_options.py
apps/consultation_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/notification_app/: admin.py  apps.py  models.py  services.py  signals.py  tasks.py  tests.py
apps/profile_app/: apps.py  google_calendar_views.py  models.py  serializers.py  urls.py  views.py
apps/teacher_app/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/todo_app/: admin.py  admin_api_service.py  apps.py  config.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
apps/todos_app/: apps.py  models.py  serializers.py  services.py
config/: celery.py  settings.py  urls.py
core/: context_processors.py  exceptions.py  middleware.py  mixins.py  pagination.py  serializers.py
(+34 files in other folders)
